--- a/backend/package.json
+++ b/backend/package.json
@@ -19,11 +19,14 @@
   },
   "homepage": "https://github.com/To-Buy-List/tobuylistRepo#readme",
   "dependencies": {
+    "atob": "^2.1.2",
+    "atob-lite": "^2.0.0",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.24",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
