Logging Errors Done

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "To buy list App",
-  "name": "To buy list App PWA",
+  "short_name": "BM App",
+  "name": "Buy Me",
   "icons": [
     {
       "src": "/images/logo1.png",
