--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -4,7 +4,7 @@
   "icons": [
     {
       "src": "/favicon.ico",
-      "type": "image/png",
+      "type": "image/x-icon",
       "sizes": "1024x1024"
     }
   ],
